<resources>
    <string name="app_name">KotlinApp</string>
    <string name="app_Name">Name</string>
    <string name="app_Age">Age</string>
    <string name="app_Button">Ejecutar</string>
    <string name="app_radioButtonM">Masculino</string>
    <string name="app_radioButtonF">Femenino</string>
    <string name="app_alertDialog">¿Estás seguro de eliminar el registro?</string>
    <string name="app_searchView">Buscar</string>
</resources>

